# parry.rs

./: .gitignore  .htaccess  docusaurus.config.js  generate_user_guides.sh  package.json  publish.sh  sidebar_docs.js
.github/: ci.yml
.github/workflows/: ci.yml  diff_user_guides.yml
community/: acknowledgements.mdx  support.mdx
docs/: about_parry.mdx
docs-examples/: Cargo.toml  README.md
docs-examples/2d/rust/: Cargo.toml
docs-examples/2d/rust/examples/: bounding_volumes2.rs  geometric_queries2.rs  geometric_representations2.rs  mesh_transformation2.rs
docs-examples/3d/rust/: Cargo.toml
docs-examples/3d/rust/examples/: bounding_volumes3.rs  geometric_queries3.rs  geometric_representations3.rs  mesh_transformation3.rs
docs-examples/inject_file/: Cargo.toml
docs-examples/inject_file/src/: main.rs
docs/user_guide/: bounding_volumes.mdx  geometric_queries.mdx  geometric_representations.mdx  mesh_transformation.mdx
docs/user_guide/templates/: bounding_volumes.mdx  geometric_queries.mdx  geometric_representations.mdx  getting_started.mdx  mesh_transformation.mdx
src/pages/: index.js
static/img/: bounding_volume_bounding_sphere_tight.afdesign  decomposition.afdesign  lego.afdesign  logo_parry.afdesign  rotation.afdesign
