[package]
name = "parry_snippets_rust2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parry2d = { version = "0.17.0" }
nalgebra = { version = "0.33", features = ["rand"] }
approx = "*"
rand = "*"
